--- a/ide/fCategory.lfm
+++ b/ide/fCategory.lfm
@@ -2,54 +2,54 @@ object CategoryForm: TCategoryForm
   Left = 316
   Height = 471
   Top = 127
-  Width = 721
+  Width = 730
   Caption = 'Category'
   ClientHeight = 471
-  ClientWidth = 721
+  ClientWidth = 730
   LCLVersion = '1.3'
   object Commands_bind: TStringGrid
     Left = 0
-    Height = 395
-    Top = 40
-    Width = 721
+    Height = 363
+    Top = 72
+    Width = 730
     Align = alClient
     AutoFillColumns = True
     FixedCols = 0
     Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing, goAutoAddRows, goTabs, goSmoothScroll]
     TabOrder = 1
     ColWidths = (
-      143
-      143
-      143
-      143
-      145
+      144
+      144
+      144
+      144
+      148
     )
   end
   object pnDetail: TPanel
     Left = 0
-    Height = 40
+    Height = 72
     Top = 0
-    Width = 721
+    Width = 730
     Align = alTop
     Caption = 'pnDetail'
-    ClientHeight = 40
-    ClientWidth = 721
+    ClientHeight = 72
+    ClientWidth = 730
     TabOrder = 0
     object Name_bind: TLabeledEdit
       Left = 48
-      Height = 24
+      Height = 23
       Top = 8
-      Width = 560
+      Width = 673
       Anchors = [akTop, akLeft, akRight]
       EditLabel.AnchorSideTop.Control = Name_bind
       EditLabel.AnchorSideTop.Side = asrCenter
       EditLabel.AnchorSideRight.Control = Name_bind
       EditLabel.AnchorSideBottom.Control = Name_bind
       EditLabel.AnchorSideBottom.Side = asrBottom
-      EditLabel.Left = 11
-      EditLabel.Height = 18
-      EditLabel.Top = 11
-      EditLabel.Width = 34
+      EditLabel.Left = 8
+      EditLabel.Height = 15
+      EditLabel.Top = 12
+      EditLabel.Width = 37
       EditLabel.Caption = 'Name'
       EditLabel.ParentColor = False
       LabelPosition = lpLeft
@@ -57,26 +57,44 @@ object CategoryForm: TCategoryForm
       Text = 'Name'
     end
     object Favorite_bind: TCheckBox
-      Left = 632
-      Height = 26
-      Top = 6
+      Left = 48
+      Height = 21
+      Top = 40
       Width = 74
       Anchors = [akTop, akRight]
       Caption = 'Favorite'
       TabOrder = 1
+    end
+    object RunAll_bind: TCheckBox
+      Left = 152
+      Height = 21
+      Top = 40
+      Width = 67
+      Anchors = [akTop, akRight]
+      Caption = 'Run all'
+      TabOrder = 2
+    end
+    object RunAllFavorite_bind: TCheckBox
+      Left = 248
+      Height = 21
+      Top = 40
+      Width = 110
+      Anchors = [akTop, akRight]
+      Caption = 'Run all favorit'
+      TabOrder = 3
     end
   end
   object pnBottom: TPanel
     Left = 0
     Height = 36
     Top = 435
-    Width = 721
+    Width = 730
     Align = alBottom
     ClientHeight = 36
-    ClientWidth = 721
+    ClientWidth = 730
     TabOrder = 2
     object btnOK: TBitBtn
-      Left = 453
+      Left = 462
       Height = 30
       Top = 2
       Width = 112
@@ -88,7 +106,7 @@ object CategoryForm: TCategoryForm
       TabOrder = 0
     end
     object btnCancel: TBitBtn
-      Left = 573
+      Left = 582
       Height = 30
       Top = 2
       Width = 112
