render icons on windows and unix via same interface

--- a/ide/fLauncher.lfm
+++ b/ide/fLauncher.lfm
@@ -4322,6 +4322,7 @@ object LauncherForm: TLauncherForm
   end
   object ilIcons: TImageList
     AllocBy = 16
+    BkColor = clBlack
     DrawingStyle = dsTransparent
     left = 40
     top = 56
